partial views for contributors and stargazers were added

--- a/public/partials/user-input.html
+++ b/public/partials/user-input.html
@@ -1,5 +1,5 @@
-<div ng-controller="UserInputController as userInput">
-    <form ng-submit="userInput.showUser(username)" >
+<div>
+    <form ng-submit="showUser(username)" >
         <input type="search" placeholer="user name" required ng-model="username" />
         <input type="submit" value="Search" />
     </form>
